# natural-language-processing

./: .gitignore  MODELCARD.md  README.md  example.config.yaml  main.py  pyproject.toml
archive/: assignment1eval.txt  svm_gridsearch_results_2026-02-19T13:01:11.929545.csv
data/: info.md
notebooks/: assignment2.ipynb  info.md
reports/assignment1/: main.tex  references.bib
reports/assignment2/: main.tex  references.bib
reports/assignment3/: main.tex
results/: assignment1eval.txt  error-analysis-output.txt
src/: const.py
src/data/: agnews.py  agnews2trans.py  agnews2vec.py  data.py  download.py
src/models/: cnn.py  distilbert.py  lstm.py
src/showcase/: assignment1.py  assignment2.py  assignment3.py
src/training/: analyze_errors.py  eval.py  gridsearch.py  train.py  trainer.py
src/utils/: data.py  error_analysis_pipeline.py  logging.py  output.py  robustness.py  singleton.py  ui.py
