[project]
name = "natural-language-processing"
version = "0.1.0"
description = "Natural Language Processing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.38.1",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "typing>=3.10.0.0",
]


[dependency-groups]
lint = [
    "black",
    "black[jupyter]"
]
