[project]
name = "natural-language-processing"
version = "0.1.0"
description = "Natural Language Processing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "matplotlib>=3.10.8",
    "polars>=1.38.1",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "typing>=3.10.0.0",
]


[dependency-groups]
lint = [
    "black",
    "black[jupyter]"
]
